2012-09-05  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/command/main.py:
	* python/mushin/common/app.py:
	  Add options for host and port.  Pass them properly to
	  the servers.

2012-09-05  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/common/logcommand.py:
	  Fix log depth

2012-09-05  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/command/list.py:
	* python/mushin/command/main.py:
	* python/mushin/common/app.py:
	* python/mushin/common/tcommand.py:
	* python/mushin/model/couch.py:
	* python/mushin/extern (svn:externals):
	  Update to new python-command.
	  Use TwistedCommand and ReactorCommand where appropriate.
	  Use authenticator for CouchDB client.
	  Store servers used by getServer and getNewServer so that
	  they reuse the same instance, and hence the same agent and
	  cookies.
	  Both authenticating with user/pass and then getting a session
	  and using authcookies now works.

2012-09-05  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/model/couch.py:
	  Show 8 characters for id after new collision.

2012-09-05  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/common/logcommand.py:
	  Hook up warning and error too.

2012-09-02  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/common/app.py:
	  Use kwargs more.

2012-09-02  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/command/main.py:
	  Clean up whitespace.

2012-09-02  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/maemo/start.py:
	  Remove unused import.

2012-09-02  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/maemo/lists.py:
	  Add logging.

2012-05-13  Thomas Vander Stichele  <thomas at apestaart dot org>

	* bin/mushin-maemo:
	* python/mushin/maemo/main.py:
	  Move pjson mangling to avoid the reactor.

2012-05-13  Thomas Vander Stichele  <thomas at apestaart dot org>
